{
  "version": 4,
  "terraform_version": "0.12.25",
  "serial": 89,
  "lineage": "f071c914-30f3-f0fc-c0f9-9082bfa71cb8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0a2f588ffdbda723e",
            "public_dns": "ec2-52-214-25-155.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.214.25.155",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ea3405d2d2522162",
            "arn": "arn:aws:ec2:eu-west-1:480098623431:instance/i-06fda3c69caaef819",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06fda3c69caaef819",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d5b041fa41687ed3",
            "private_dns": "ip-10-0-0-174.eu-west-1.compute.internal",
            "private_ip": "10.0.0.174",
            "public_ip": "63.32.117.199",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0d68ca84c37824199",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-063391720ecd3afff",
            "tags": {
              "Name": "Public: Ec2-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-007b6c4686f436622"
            ]
          },
          "dependencies": [
            "aws_security_group.vpc_nat",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ea3405d2d2522162",
            "arn": "arn:aws:ec2:eu-west-1:480098623431:instance/i-0a64ca4f0b493b0e9",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a64ca4f0b493b0e9",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-020e3013dd8719bcd",
            "private_dns": "ip-10-0-0-5.eu-west-1.compute.internal",
            "private_ip": "10.0.0.5",
            "public_ip": "34.241.201.111",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0bdd734fcce468689",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-063391720ecd3afff",
            "tags": {
              "Name": "Public: Ec2-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-007b6c4686f436622"
            ]
          },
          "dependencies": [
            "aws_security_group.vpc_nat",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ea3405d2d2522162",
            "arn": "arn:aws:ec2:eu-west-1:480098623431:instance/i-0f01a509966b11347",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f01a509966b11347",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0639d701fd9211b2c",
            "private_dns": "ip-10-0-1-183.eu-west-1.compute.internal",
            "private_ip": "10.0.1.183",
            "public_ip": "34.250.30.135",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-076aa2d5f66534994",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d0530ec1c7a8d988",
            "tags": {
              "Name": "Private: Ec2-3"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-007b6c4686f436622"
            ]
          },
          "dependencies": [
            "aws_security_group.vpc_nat",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:480098623431:internet-gateway/igw-0a90c4ae3bea2f35d",
            "id": "igw-0a90c4ae3bea2f35d",
            "owner_id": "480098623431",
            "vpc_id": "vpc-0d30acc2c4bf9170b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a2f588ffdbda723e",
            "id": "nat-06db3ada1cc108303",
            "network_interface_id": "eni-04cbaccc47d211dc9",
            "private_ip": "10.0.0.106",
            "public_ip": "52.214.25.155",
            "subnet_id": "subnet-063391720ecd3afff",
            "tags": {
              "Name": "Private subnet"
            }
          },
          "dependencies": [
            "aws_eip.private",
            "aws_internet_gateway.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0904b5d15afba0ac6",
            "owner_id": "480098623431",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-06db3ada1cc108303",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private subnet"
            },
            "vpc_id": "vpc-0d30acc2c4bf9170b"
          },
          "dependencies": [
            "aws_eip.private",
            "aws_internet_gateway.public",
            "aws_nat_gateway.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e0402e470dec10f5",
            "owner_id": "480098623431",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a90c4ae3bea2f35d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public subnet"
            },
            "vpc_id": "vpc-0d30acc2c4bf9170b"
          },
          "dependencies": [
            "aws_internet_gateway.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c756bdb6f9634d7a",
            "route_table_id": "rtb-0904b5d15afba0ac6",
            "subnet_id": "subnet-0d0530ec1c7a8d988"
          },
          "dependencies": [
            "aws_eip.private",
            "aws_internet_gateway.public",
            "aws_nat_gateway.private",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-061d3cd33cc855409",
            "route_table_id": "rtb-0e0402e470dec10f5",
            "subnet_id": "subnet-063391720ecd3afff"
          },
          "dependencies": [
            "aws_internet_gateway.public",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:480098623431:security-group/sg-007b6c4686f436622",
            "description": "Allow traffic to pass from the private subnet to the internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-007b6c4686f436622",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vpc_nat",
            "name_prefix": null,
            "owner_id": "480098623431",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "NAT Security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d30acc2c4bf9170b"
          },
          "dependencies": [
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:480098623431:subnet/subnet-0d0530ec1c7a8d988",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0d0530ec1c7a8d988",
            "map_public_ip_on_launch": false,
            "owner_id": "480098623431",
            "tags": {
              "Name": "VPC_Subnet_2"
            },
            "vpc_id": "vpc-0d30acc2c4bf9170b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:480098623431:subnet/subnet-063391720ecd3afff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-063391720ecd3afff",
            "map_public_ip_on_launch": false,
            "owner_id": "480098623431",
            "tags": {
              "Name": "VPC_Subnet_1"
            },
            "vpc_id": "vpc-0d30acc2c4bf9170b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:480098623431:vpc/vpc-0d30acc2c4bf9170b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b21d4f335519ab77",
            "default_route_table_id": "rtb-0c9c82fdd78745cfb",
            "default_security_group_id": "sg-045c56f64fb1cb54e",
            "dhcp_options_id": "dopt-390c275f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d30acc2c4bf9170b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c9c82fdd78745cfb",
            "owner_id": "480098623431",
            "tags": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}